--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -14,7 +14,7 @@
     "<all_urls>"
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background-wrapper.js"
   },
   "action": {
     "default_popup": "popup.html",
@@ -31,14 +31,24 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "content.js"
+      ],
+      "type": "module"
     }
   ],
   "web_accessible_resources": [
     {
-      "resources": ["icons/*", "styles/*"],
-      "matches": ["<all_urls>"]
+      "resources": [
+        "icons/*",
+        "styles/*"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
     }
   ]
 }
