--- a/backend/package.json
+++ b/backend/package.json
@@ -23,8 +23,7 @@
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "validator": "^13.11.0",
-    "winston": "^3.11.0"
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "chai": "^4.3.10",
