feat: Improve screenshot capture reliability and extension initialization
- Enhanced extension initialization in `background.js` to include error handling, default preference setup, authentication status check, and tab event listener setup.
- Improved tab change handling in `background.js` to include more logging and checks to prevent redundant processing.
- Added a small delay in `screenshot.js` before capturing screenshots to ensure the page is fully loaded.
- Added more logging in `screenshot.js` to track the screenshot capture process and debug potential issues.
- Added "unlimitedStorage" permission to `manifest.json`.

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -8,7 +8,8 @@
     "activeTab",
     "storage",
     "scripting",
-    "webNavigation"
+    "webNavigation",
+    "unlimitedStorage"
   ],
   "host_permissions": [
     "http://*/*",
@@ -33,15 +34,24 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "js": ["content/content.js"],
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "content/content.js"
+      ],
       "run_at": "document_idle"
     }
   ],
   "web_accessible_resources": [
     {
-      "resources": ["icons/*", "timeline/*"],
-      "matches": ["<all_urls>"]
+      "resources": [
+        "icons/*",
+        "timeline/*"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
     }
   ],
   "content_security_policy": {
